--- a/_posts/2018-12-10-blog-post-7.md
+++ b/_posts/2018-12-10-blog-post-7.md
@@ -94,13 +94,13 @@ One of reasons I wanted to study abroad was so I could travel on weekends. I mad
 <img src='/images/dtu/venice.jpg' width="32%">
 Left, Croatian breakfast for which I forgot to write down the name; middle, Venetian gondolas; right, Rialto Bridge in Venice.
 
-# Munich (Oct 5-8)
+## Munich (Oct 5-8)
 
 **Getting "sloshed".** I went with Prahlad and another friend from Dartmouth, Naren, to Munich for a weekend. On the first day, we went to Oktoberfest, the world's largest beer festival (apparently more than six million people attend every year). Oktoberfest was on a huge festival ground with twelve massive beer tents where Germans and tourists dressed in Lederhosen (men) and Dirndl (women) and got drunk. We all had a good time drinking German beer. Drinking seems to be a bigger part of European culture than American, as the drinking age in most European countries is 18 (sometimes 16 for beer). Since housing was so expensive due to the Oktoberfest, we stayed in a campsite hosted by Stoke Travel. It a chaotic party ground where everyone stayed in tents, and there was free beer and people partying at every hour of the night.
 
 **Things built by rich German kings.** The second day, we went on a day tour to Linderhof Palace and Neuschwanstein Castle, each a couple of hours from the city by bus. Linderhof Palace, built by King Ludwig II, was not exceedingly large in size, but each room inside was luxuriously decorated with incredible detail and made me feel poor and insignificant. Neuschwanstein Castle was a beautiful castle in the middle of the mountains, with fantastic views on all sides. I wish I could have stayed for longer to appreciate the incredible view.
 
-# Amsterdam (Oct 26-29)
+## Amsterdam (Oct 26-29)
 
 **Why is everything legal?** On the recommendation of my international friends at Dartmouth, I went to Amsterdam with Prahlad, Naren, and another friend, Sunny. Amsterdam is known for its red light district, and it was all that I had imagined. The streets were filled with shops selling cannibis, magic mushrooms, and other products. "Coffeeshops" in amsterdam did not sell coffee; they sold weed. It was an entirely new experience to be in a hyper-liberal city where drugs and prostitution was legal and accepted. We spent an afternoon at the Van Gogh museum. I saw *Sunflowers* and *The Yellow House*, as well as many of his self-portraits, though my favorite painting was *Bedroom in Arles*. It was odd that *The Starry Night* was not in this museum (it is actually in MoMA in New York, where I saw it a couple of years ago). We also toured the Heineken factory in Amsterdam, where we learned about how beer was made. I checked out Holland Casino, but since it was saturday night there was a long queue to get onto a No Limit Hold-em table, so I just watched for a little and then left.
 
@@ -111,7 +111,7 @@ Left, Croatian breakfast for which I forgot to write down the name; middle, Vene
 <img src='/images/dtu/zaanse_schans.jpg' width="32%">
 Left, Oktoberfest; middle, Neushwanstein Castle; right, Zaanse Schans.
 
-# Nice & Monte Carlo (Nov 9-12)
+## Nice & Monte Carlo (Nov 9-12)
 
 **The beautiful shoreline.** I went with my friends Devon and Jeffrey, both Dartmouth students studying abroad in the UK, to Nice, a coastal city in Southern France on the Mediterranean Sea. We went in early November, and although it was already cold in Copenhagen (~40F), it was actually quite warm in Nice (~65F). Along the coast of nice is the Promenade Des Anglais (Bay of Angels Boulevard), a beautiful walkway with restaurants and shops on one side and the rocky beach on the other. Nice is situated in an inlet, so you could see the entire length of the beach all the way to the airport. The palm trees and shoreline reminded me of Florida and Puerto Rico. There were lots of benches and chairs situated along the boulevard, and we probably spent a couple of hours total just sitting on the boulevard and admiring the view. Admiring the sunset in perfect weather without seeing miles of tourists was therapeudical. There's just something magical about the beach at night.
 
@@ -124,7 +124,7 @@ Left, Oktoberfest; middle, Neushwanstein Castle; right, Zaanse Schans.
 <img src='/images/dtu/nice_shoreline.jpg' width="99%">
 The view of Promenade Des Anglais from Château de Nice, a military fort on the coast of Nice.
 
-# London (Nov 26-28)
+## London (Nov 26-28)
 
 **Pretending I'm in Sherlock because everyone has a British accent.** I went to London for a short weekend to visit Devon, who was studying abroad there for the term. Before arriving, I had no idea how big of a city London actually was. I visited the Sherlock Museum on 221B Baker Street, as well as 187 North Gower Street, where the Sherlock BBC series was actually filmed. I also went to the British Museum with Devon and my friend Hyemin, where we saw the Rosetta Stone, ancient Egyptian mummies, and parts of the Parthenon. It was like walking through a textbook. I also played a 1-1 cash game at The Poker Room at Victoria's Casino. I think I only won four hands in total: I took down two hands where I hit an ace on the flop with A-10, a two pair of fives and deuces that I hit on the flop and slow-played, and pocket nines that were checked all the way. Otherwise, I played pretty conservatively and ended the night up 10 pounds on a 50 pound buy-in.
 
@@ -133,7 +133,7 @@ The view of Promenade Des Anglais from Château de Nice, a military fort on the 
 <img src='/images/dtu/sherlock_set.jpg' width="32%">
 Left, the beach at Nice; middle, Monte Carlo Casino; right, if you've seen the Sherlock series from BBC then you know what this is.
 
-# Istanbul (Nov 30 - Dec 3)
+## Istanbul (Nov 30 - Dec 3)
 
 **This city never sleeps.** Devon and I went with Naren to visit our friend Orkan, a Tri-Kap brother, at his home in Istanbul. Istanbul was a crazy experience. We visited the Hagia Sophia, the Blue Mosque, the Grand Bazaar, and took a boat tour of the Bosphorus straight. I really enjoyed Orkan's family's hospitality and traditional Turkish food. Orkan's parents treated us to a great dinner that we were at for almost six hours, with Turkish delicacies such as sheep brain, as well as rakı (a popular Turkish drink). One night, we stayed up until 7am in the morning hanging out at a hookah bar. What's crazy was that even at that hour, most restaurants in the area were half-full with people partying, and the streets had a decent amount of people walking around. Istanbul never sleeps, for real.
 
@@ -143,7 +143,7 @@ Left, the beach at Nice; middle, Monte Carlo Casino; right, if you've seen the S
 <img src='/images/dtu/orkan_family.jpg' width="48%">
 Left, Naren, Devon, Me, and Orkan at the Hagia Sophia; right, dinner with Orkan's family.
 
-# Lithuania (Dec 3-6)
+## Lithuania (Dec 3-6)
 
 **A magical place.** After Istanbul, I went to Lithuania to visit Jonas. Our friend Sri also came, and we had a nice ten-mile hike down Neringa, where we saw the Nida sand dunes and walked through the cleanest forest I've ever been in. The next day, we took the train to Vilnius, where I thoroughly enjoyed the old town and the view from the Hill of Three Crosses. We went to a couple of museums, but my favorite part was the Christmas market, which felt magical. Jonas' mother cooks incredible food, and I thank his family for their hospitality.
 
