--- a/_posts/2018-12-10-blog-post-7.md
+++ b/_posts/2018-12-10-blog-post-7.md
@@ -79,13 +79,13 @@ Travels
 ------
 One of reasons I wanted to study abroad was so I could travel on weekends. I made a total of eight trips over the weekends and visited eleven countries. My adventures:
 
-# Zagreb (Sep 22-25)
+## Zagreb (Sep 22-25)
 
 **A homey city.** My first trip out of Denmark was to Zagreb, Croatia. As the cultural center and capital of Croatia, Zagreb was welcoming and comforting, especially for pedestrian tourists. Croatian food was delicious, and you could get a full meal at a restaurant for the equivalent of $5. Street shops sold croissants and cheesy bread for only 1 kuna ($0.15). My friend Prahlad and I stayed in two different family-run hotels that cost $70/night, and they were both within five minutes walking of the square, which is incredible for the price. Our flight back to Copenhagen got cancelled, so we got to stay in the five star Sheraton Zagreb. Zagreb is very much a rising Eastern European city that I would definitely recommend visiting.
 
 **Traffic at a national park.** The second day, we went on an excursion to Plitvice Lakes National Park, is a beautiful park of lakes and waterfalls accessible by wooden walkways. There were multiple layers of lakes, and Prahlad and I had a nice three hour hike. However, the park was terribly crowded (lots of tourists from Korea), even though we went during the off-season.
 
-# Venice (Sep 29 - Oct 2)
+## Venice (Sep 29 - Oct 2)
 
 **Canals for days.** The next weekend, Prahlad and I found cheap tickets for a short trip to Venice. The city was quite small but it was constantly alive with cafes and shops lining the streets and tourists everywhere. They exclusively used canals instead of roads; even the ambulance was a boat. We toured Doge's Palace, which had grand chambers where all walls and ceilings were covered with beautiful murals. There wasn't too much to do, but I would recommend seeing Venice (maybe just a day trip) for those who haven't been, especially since it is slowly sinking.
 
