--- a/_posts/2018-12-10-blog-post-7.md
+++ b/_posts/2018-12-10-blog-post-7.md
@@ -61,7 +61,7 @@ Left, the DTU library; middle, my room; right, Linde Alle apartment complex.
 <img src='/images/dtu/christiania.jpg' width="32%">
 <img src='/images/dtu/mons_klint.jpg' width="32%">
 <img src='/images/dtu/savior_church.jpg' width="32%">
-Left, Christiania; middle, the chalky cliffs of Møns Klint; right, the sunset at Klintholm Havn.
+Left, Christiania; middle, the chalky cliffs of Møns Klint; right, me and Jonas at the *Church of Our Saviour* tower.
 
 Classes
 ------
