--- a/_drafts/2019-03-25-blog-post-8.md
+++ b/_drafts/2019-03-25-blog-post-8.md
@@ -9,23 +9,152 @@ tags:
   - research
 ---
 
-This winter, I split my time between at Hassanpour Lab and research at Protago Labs.
+This winter, I split my time between Hassanpour Lab and AI research at Protago Labs.
 
-Me and My Research
+## Me and My Research
 
-WSI generation
+The majority of my time this term was spent at home remotely working on research with my advisor Saeed Hassanpour, which is always a pleasure.
 
-Data saturation
+Recently, three papers were published:
 
-NLP
+lung
 
-Visiting Dartmouth
+celiac
 
-Living at Home
+urine
+
+**Open-Source Code**. One cool thing that happened was that I posted my code for histopathology image classification called *DeepSlide* publicly on [Github](https://github.com/BMIRDS/deepslide), and it was [retweeted](https://twitter.com/saeedhp) by PyTorch! It was nice to finally get stars on the Github repo, and a bunch of randos have been emailing me with questions about our paper.
+
+**Moving forward**. 
+
+## Protago Labs
+
+**Data augmentation in NLP**. I worked part-time remotely with the research group at Protago Labs, an artificial intelligence startup in Tysons Corner, VA. Because of my experience working with small datasets, I wanted to explore data augmentation techniques in natural language processing (NLP), a topic with a lack of good literature in the field. I developed a simple set of techniques called *EDA* for Easy Data Augmentation, and wrote a [paper](https://arxiv.org/abs/1901.11196) demonstrating this on various datasets. 
+
+**Blogging.** I wrote a [blog post](https://towardsdatascience.com/these-are-the-easiest-data-augmentation-techniques-in-natural-language-processing-you-can-think-of-88e393fd610) about EDA on Medium, which was the first academic blog post I've written. I was surprised to see that it was chosen by Medium curators to be distributed to readers following the "Machine Learning" and "Data Science" tags, and my post got 500+ views and 250+ reads in one week! It was encouraging to see people reading about my work and emailing me with questions. 
+
+## Living at Home
+
+
+## Working Out
+
+I was never really into working out but I did a bit in Denmark and liked it so I got a gym membership with my brother.
+
+**Workout plan.** 
+
+**Nutrition plan.** I ate three meals a day: lunch and two dinners. This was often 1.5 cups of rice with meat and vegetables. Each day, I took 3 scoops of whey protein, 5g of creatine, 2 fish oil tablets, and occasionally a caffeine pill.
+
+**Improvement.**
+
+**How do I feel about this?**
+
+Molly's Game
+
+Power of visualization: whether it is on the bench press, what you what your cleaned room to look like, or the results of a research project.
 
 
 
+## Reading
 
+Since I had more time this term than usual, I did some reading. Someone put years of work and decades of knowledge into a book, and I'm able to absorb a large amount of that in tens of hours. I find that extremely empowering.
+
+***The Subtle Art of Not Giving a F\*ck.*** I bought this book because of its incredible reviews on Amazon. Manson is a big potty-mouth but brings up insightful ideas on self-improvement and tells things like it is. Most good books have one or maybe two or three takeaways, but this book has like, dozens. I realize that this book may not be very helpful for established adults with a lot of life experience, but as a 20-year-old reading it, I consider many of his ideas profound. I would recommend it to anyone younger than 30 years old. These are his biggest ideas:
+
+1. **"Not giving a fork."** means not caring about unimportant things. Reserve your ducks for what truly matters. If you are constantly bothered by trivial things, find something more important to give a firetruck about. What matters to me? Family, friends, health, research, the future of humanity, stuff like that. Not xyz.
+2. **Problems.** They never end, just merely get exchanged or upgraded. Solving them brings happiness. Think of happiness as a constant work-in-progress, since problems never end and you will have to keep solving them. What problems do you want to struggle for? Don't ask yourself what you enjoy. Ask yourself, what pain are you willing to sustain?
+3. **"Highs."** Manson defines "highs" as temporary ways to feel good that do not address the underlying problem. This obviously includes drugs, alcohol, and sex, but denial and blame are also highs to temporarily make themselves feel better. 
+4. **Entitlement.** People who think that they are better or worse than everyone else think they deserve special treatment. Information overload in our age overstates exceptionalism and makes people think that it is not okay to be average.
+5. **Values.** These are used to measure your life. Bad values: pleasure, material success, being liked by everybody, not being alone. Good values: honesty, innovation, vulnerability, curiosity, creativity. 
+6. **Fault versus responsibility.** Often, bad things in life that happen to you are not your fault. But it's your responsibility to deal with the pain.
+7. **Being wrong.** Manson says that everyone is wrong about everything, some people are just less wrong. As a math/computer science guy I have a hard time wrapping my head around this, but the point he makes is that being uncertain about yourself and open to the fact that you can be wrong (i.e., other ideas can be better than your own) leads to growth. He says not to find your place in the world. Holding on to an identity you've created for yourself hinders discovery and improvement. Measure yourself by more mundane identities: a student, a partner, a friend, a creator.
+
+Other ideas that I liked:
+
+- **Lessons learned from poker.** Manson played poker seriously for a year in college and said that it had a profound influence on the way he saw life. He says that luck (i.e. the hand you are dealt) is involved but doesn't dictate long-term results. "People who consistently make the best choices in the situations they're given are the ones who come out ahead in poker, just as in life. And it's not necessarily the people with the best cards."
+- **Improvement.** He emphasizes improvement over goals like monetary profit, something that Simon Sinek also preaches. Sinek says that success in the long run is achieved by continuous improvement, measured against oneself.
+- **Freedom.** He says that he felt more free in Russia than America because people were blunt and honest in their communication.
+- **The "do something" principle.** Traditionally, people think it goes inspiration -> motivation -> action, but this often is unproductive in practice. Instead, use action -> inspiration -> motivation.
+- **Love.** Unhealthy love is two people trying to escape their problems through their emotions for each other. Healthy love is two people acknowledging and addressing their own problems with each other's support.
+- **Death.** Manson cites Ernest Becker's *The Denial of Death*, which argues that because people fear death, they aim to create a conceptual self that will live forever, an *immortality project*. This can be in the form of names on buildings, statues, careers, children, etc. These immortality projects often lead to entitlement and are a problem. Comfortable with and acceptance of the inevitability of our own death allows us to choose our values more freely. The only way to be comfortable with death is to see yourself as part of something bigger and more unknowable than yourself. "A man who lives fully is prepared to die at any time."
+
+Studying abroad some high thoughts opened my mind up to new perspectives on / ways of thinking of life that I would not have been able to comprehend as a teenager.
+
+- Today's culture of unrealistic positive expectations and being self centered, exascerbated by social media.
+- Learning from failures and negative experiences create success, so accept them.
+
+In tenth grade, I was sucking-up to my history teacher because I had an A- in her class and it was obvious that I just wanted a better grade. She responded by asking me, "why are you so focused on wealth and status?" I told her that I didn't know what I wanted in life, so I only knew to try my best in school so that when I figured out what it was I really wanted, I would be in the best position to achieve it. That was my justification for being so focused on the grade.
+
+After I left the classroom, I remember thinking that she was just salty that she had went to school to become a lawyer but ended up becoming a high school teacher who got butthurt every other day because none of her students liked her or cared about her class. At that moment, when I was fifteen, I could not imagine any reality other than the fact that I was right: I was smarter than her and going to be more successful than her, and she was salty about that and taking her failure out on me. But thinking about it now, I was probably wrong. My current mindset finds that 15-year-old me was pretty stupid. Five years from now, I'll probably think that current me was pretty stupid. Although this does remind me, I do think that my raw intelligence peaked when I was 16 because I had so much work and pressure that year. Here, raw intelligence means: ability to take a test well, rate of absorbing knowledge, rate of doing homework and projects.
+
+Rejection: I applied to like over twenty finance internships my freshman year of college, and I was rejected by all of them. I felt inadequate and was pissed that having "Dartmouth" on my resume wasn't getting me anywhere like I had imagined in high school. But because I didn't get any of those jobs, I was at home and my mom finally connected me to Protago Labs, where I was introduced to artificial intelligence and have been inspired to work in deep learning ever since.
+
+I think this book is powerful for college-age/mid-twenties readers who are looking for what they want to do with life. But I don't think it will resonate much with people over like 40 years old, as they've had enough experience to already know many of these things.
+
+***Deep Work.*** I was motivated to read this book after my advisor shared this [post](https://www.chronicle.com/interactives/is-email-making-professors-stupid) with me. Cal Newport defines "deep work" as concentrated work that pushes cognitive abilities to their limit, an idea I really connected with. I realized that I haven't actually done this much; think I was better at achieving this actually my junior year of high-school, when I would frequent the library to get distraction-free studying done since I had to shove a high density of information into my brain for all my classes and projects. A couple of points that I really liked:
+1. **Working in batches.** Adam Grant (a Wharton professor) was prolific because he batched hard work into long, uninterrupted stretches (e.g., one semester just teaching, one just research).
+2. **Flow.** Deep work often involves a flow state, which generates happiness (busy work doesn't).
+3. **The bimodal philosophy of deep work scheduling.** Reserve 1-3 days a week for deep work and leave the rest for open time.
+4. **The grand gesture strategy.** Go somewhere new when you want to finish a specific task.
+5. **Lead measures vs lag measures.** Keep track of time spent doing deep work (lead measure) rather than number of papers published (lag measure).
+6. **Stop.** Forget about work once your workday shuts down. Use a shutdown ritual.
+7. **Boredom and idleness.** Don't check your phone when you're bored. Schedule internet time. 
+
+***The Life-Changing Magic of Tidying Up.*** When I was packing for Denmark last fall, I thought hard about what possessions I need and were important to me, so I was interested in this book. Marie Kondo's proposed Kon-Mari technique involves discarding all posessions that do not spark joy, and then organizing by item category. She says that surrounding yourself with only things that bring you joy not only puts your house in order, but also brings clarity to your life. The elegance of and reasoning behind her approach substantiates the idea that a simple approach based on first principles thinking is often the best. After reading, I went to my old room in the basement and discarded more than half of my belongings.
+
+## Visiting Dartmouth
+
+I made the journey up to Dartmouth the first week of school to see friends from Tri-Kap and Tabard, and my senior friends. It's always exciting to be at school and I missed everyone during my term abroad.
+
+## Who are your heroes?
+I guess a new thing that I thought was pretty cool from Molly's Game is that her dad would ask her the same questions every year on her birthday, and track how her answers changed over time. One of those questions was "who are your heroes?"
+
+- Phil Hellmuth is the "poker brat" and known for his [rants](https://www.youtube.com/watch?v=mPmcU8u8MEc) every time he loses. But I watched some of his interviews, and his ideas regarding motivation, success, and positivety show that he is actually a next-level thinker in many regards.
+- [Bart Kwan](https://www.youtube.com/channel/UCCV3bIgzH800SK0AodYKy1g) is a youtuber, comedian, powerlifter, and business owner. He makes really great insights on working out and on life, all while being funny. He does so many things well and his lifestyle inspires me.
+- Jessica Chastain is a charismatic actor and has such a captivating voice. I loved *Molly's Game* and I thought *Jolene* was alright.
+
+## Songs
+Some songs that I've been listening to for a while now get me caught up in the feels because I've attached them to specific memories or places. I think it would be cool to listen to these 10 years from now and see if they still resonate:
+
+Winter 2018:
+* [Trance](https://www.youtube.com/watch?v=ucV93PTtieM) by MrOtterMusic: grinding out the EDA paper
+
+Fall 2018:
+* Backbeat by Dagny, Saturday Sun by Vance Joy: 5am runs and working out at the jungle gym at Kokkedal 
+* Portions for Foxes by Rilo Kiley; Effortless by Sabina Ddumba; Hey Look Ma I Made It by Panic at the Disco: biking to DTU
+* Stronger by Clean Bandit: working out at the DTU gym
+* [Paradise Mix](https://www.youtube.com/watch?v=TcEFQDdPz0g&t=402s) by MrOtterMusic: Waiting for the bus at DTU
+* [Moments](https://www.youtube.com/watch?v=A9yqbqUB__w) by MrOtterMusic: grinding out research paper submissions at the DTU library
+
+Summer 2018:
+* Everybody by Ingrid Michaelson: doing work in the pool room at Tabard
+
+Spring 2018: 
+* Sunset Jesus, Dear Boy, Broken Arrows by Avicii: living off-campus in Vermont
+* Paradise by George Ezra: driving to work at Oracle in my old Camry on a nice spring day with the windows down
+
+Winter 2018:
+* Anywhere by Rita Ora: doing work on the kitchen table at CLH 
+* Snow by Red Hot Chilli Peppers: pong at Tabard on the last day of the term
+
+Fall 2017:
+* Something Just Like This by Chainsmokers: pong at Chi-Gam with June
+
+Summer 2017:
+* Shine, Golden Year by Lolo
+
+Spring 2017:
+* Sweet Dreams (Radio Killer Remix) by Andra & Mara: hanging out in Butterfield
+
+Winter 2017:
+* Rise Up by Andra Day: rethinking life on a bench on the green after failing an Econ 22 Exam
+
+High School:
+* Me, Myself & I by G-Eazy: the concert
+* Sugar by Robin Schulz: driving to Skyline Caverns on a beautiful day in a ML350
+* I Will Return by Skylar Grey: senior homecoming drive home in ES350
+* Get Lucky by Daft Punk: Oasis of the Seas
+* Try Me by Jason Derulo, Lush Life by Zara Larsson: driving to NRL 
+* See You Again by Wiz Khalifa: my friend Derek from Chem 111 at NOVA
 
 
 
