--- a/_posts/2018-09-01-blog-post-6.md
+++ b/_posts/2018-09-01-blog-post-6.md
@@ -35,7 +35,7 @@ Activities
 
 **Sailing:** I had heard good things about the summer sailing class, so I went out of my way to take it even though I didn't need the PE credit. I had a lot of fun meeting new people and learning how to sail. It reminded me of my crew days back in high school, except more relaxing since there wasn't anyone yelling at me to row faster.
 
-**Tennis:** I played tennis about once a week with friends. It's hard to make time to hit when I'm busy with other things, even though I really enjoy tennis.
+**Tennis:** I played tennis about once a week with friends, often Allen or Zoe. It's hard to make time to hit when I'm busy with other things, even though I really enjoy tennis.
 
 Personal
 ------
