--- a/_posts/2018-12-10-blog-post-7.md
+++ b/_posts/2018-12-10-blog-post-7.md
@@ -65,7 +65,7 @@ Left, Christiania; middle, the chalky cliffs of Møns Klint; right, me and Jonas
 
 Classes
 ------
-**The Technical University of Denmark (DTU).** As part of the exchange program, I took four classes: Deep Learning, Image Analysis, Algorithms, and Applied Cryptography. Studying at DTU made me to realize how much I appreciated being at a small liberal arts college like Dartmouth. The most immediate shock was how big the classes were. At Dartmouth, twenty students is a typical class size. At DTU, many of the classes I went to were held in auditoriums, and had over a hundred students. (Although apparently even this is small, as my Cornell friends say they have classes with over a thousand students). Because of these large classes sizes, I got the feeling that professors approached class with the mindset of getting all students to learn some pre-determined course content, rather than guiding a group of individuals to learn how to think (wow, I've become a liberal arts brat). That being said, the content and teaching of some courses was quite good. I was impressed by the variety of projects offered by my Deep Learning class, and I really liked the lectures for my algorithms course. 
+**The Technical University of Denmark (DTU).** As part of the exchange program, I took four classes: Deep Learning, Image Analysis, Algorithms, and Applied Cryptography. Studying at DTU made me to realize how much I appreciated being at a small liberal arts college like Dartmouth. The most immediate shock was how big the classes were. At Dartmouth, twenty students is a typical class size. At DTU, many of the classes I went to were held in auditoriums, and had over a hundred students. (Although apparently even this is small, as my Cornell friends say they have classes with over a thousand students). Because of these large class sizes, I got the feeling that professors approached class with the mindset of getting all students to learn some pre-determined course content, rather than guiding a group of individuals to learn how to think (wow, I've become a liberal arts brat). That being said, the content and teaching of some courses was quite good. I was impressed by the variety of projects offered by my Deep Learning class, and I really liked the lectures for my algorithms course. 
 
 **Deep Learning Workshop @ Microsoft.** I went to the [Deep Learning Workshop by Microsoft](https://www.microsoftevents.com/profile/form/index.cfm?PKformID=0x4923984abcd) at their Copenhagen office, which was recommended by my deep learning professor. I thought it was pretty good, but about half the people there had no experience and the other half had some experience, so the material covered was somewhere in between and ended up being not particularly helpful for either group. However, I did really enjoy a talk given by Akshay Pai, a PostDoc at the University of Copenhagen, on his research classifying brain CT images. A lot of the challenges in his work (namely, data collection and annotation) were exactly the same as the challenges I faced in my own research classifying lung adenocarcinoma images. I was glad to see so much interest in deep learning both at this workshop and at DTU, and I'm hoping that Dartmouth begins to catch up in this regard. (Yann LeCun actually gave a talk on campus in Hanover this fall, which I'm sad to have missed but happy to hear of!)
 
@@ -119,7 +119,7 @@ Left, Oktoberfest; middle, Neushwanstein Castle; right, Zaanse Schans.
 
 **An exceptional dinner.** I rarely talk about food, but on the second night we had an exceptional dinner at [Le Démodé](https://www.tripadvisor.com/Restaurant_Review-g187234-d784016-Reviews-LE_DEMODE-Nice_French_Riviera_Cote_d_Azur_Provence_Alpes_Cote_d_Azur.html), a dainty old-fashioned French restaurant in Old Town Nice. I had veal with rice, carrots, and arugula salad. The veal was so tender that I could cut it with a fork, and the entire meal just melted in my mouth. So good.
 
-**My first poker tournament.** The last night, I signed up for a No Limit Hold'em tournament at Casino Barrière de Nice, which was just a few blocks from our airbnb. Buy in was 65 euros plus 15 euros for the registration fee. I really enjoyed my first time playing poker at a casino. I had only played before with friends, but had watched some youtube tutorials in my free time after being inpsired by the movie Rounders, so I had learned the basics and wanted to see if I was any good. I played pretty conservatively for the most part. One hand I went all in on A-K-T with AK, got called by AJ, and won. A while later, I raised pre-flop with pocket kings, got two callers, and re-raised all in on an A-J-J flop. I lost to J-10 and was knocked out of the tournament. In hindsight, I probably should have folded, since there were two callers pre-flop so an ace or jack was very likely in their ranges. Even though I didn't win, I still had a good time gambling with a bunch of old Frenchmen. My heart raced whenever I raised or went all in, and I felt like I could play for hours without wanting to stop. The casino had no windows and created a very intentional atmosphere, trapping me in an underground world where I could escape from reality and live purely in the current moment.
+**My first poker tournament.** The last night, I signed up for a No Limit Hold'em tournament at Casino Barrière de Nice, which was just a few blocks from our airbnb. Buy in was 65 euros plus 15 euros for the registration fee. I really enjoyed my first time playing poker at a casino. I had only played before with friends, but had watched some youtube tutorials in my free time after being inspired by the movie Rounders, so I had learned the basics and wanted to see if I was any good. I played pretty conservatively for the most part. One hand I went all in on A-K-T with AK, got called by AJ, and won. A while later, I raised pre-flop with pocket kings, got two callers, and re-raised all in on an A-J-J flop. I lost to J-10 and was knocked out of the tournament. In hindsight, I probably should have folded, since there were two callers pre-flop so an ace or jack was very likely in their ranges. Even though I didn't win, I still had a good time gambling with a bunch of old Frenchmen. My heart raced whenever I raised or went all in, and I felt like I could play for hours without wanting to stop. The casino had no windows and created a very intentional atmosphere, trapping me in an underground world where I could escape from reality and live purely in the current moment.
 
 <img src='/images/dtu/nice_shoreline.jpg' width="99%">
 The view of Promenade Des Anglais from Château de Nice, a military fort on the coast of Nice.
